feat: Cria rotas e crud

--- a/LordOfRings.API/appsettings.Development.json
+++ b/LordOfRings.API/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=LordOfRingsDb;User Id=sa;Password=Xbaybxdb$;TrustServerCertificate=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
