--- a/LordOfRings.Web/LordOfRings.Web.csproj
+++ b/LordOfRings.Web/LordOfRings.Web.csproj
@@ -4,13 +4,19 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+        <ProjectReference Include="..\LordOfRings.App\LordOfRings.App.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Pages\Aneis\CriarAnel.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\Aneis\Index.cshtml" />
     </ItemGroup>
 
 </Project>
