--- a/LordOfRings.Web/appsettings.Development.json
+++ b/LordOfRings.Web/appsettings.Development.json
@@ -1,5 +1,7 @@
 {
-  "DetailedErrors": true,
+  "ApiSettings": {
+    "BaseUrl": "http://localhost:5043"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
