--- a/LordOfRings.Web/appsettings.json
+++ b/LordOfRings.Web/appsettings.json
@@ -1,9 +1,11 @@
 {
+  "ApiSettings": {
+    "BaseUrl": "http://localhost:5043"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
