--- a/LordOfRings.API/appsettings.json
+++ b/LordOfRings.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=LordOfRingsDb;User Id=sa;Password=Xbaybxdb$;TrustServerCertificate=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
